# coursework_django

./: .env_example  .gitignore  permissions.py  pyproject.toml
config/: settings.py  urls.py
mailing/: models.py  services.py  urls.py  views.py
mailing/management/commands/: send_newsletter.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
mailing/templates/mailing/: mailing_confirm_delete.html  mailing_form.html  mailings_list.html
messaging/: models.py  urls.py  views.py
messaging/migrations/: 0001_initial.py  0002_initial.py
messaging/templates/messaging/: message_confirm_delete.html  message_form.html  messages_list.html
recipients/: admin.py  apps.py  models.py  urls.py  views.py
recipients/migrations/: 0001_initial.py  0002_initial.py
recipients/templates/recipients/: recipient_confirm_delete.html  recipient_form.html  recipient_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  main.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  user_form.html  user_profile.html  user_profile_edit.html  user_statistics.html
users/templates/users/includes/: menu.html
