[project]
name = "coursework-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Pikov",email = "dmitrypikov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "psycopg-binary (==3.2.12)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
